Added about page and redesigned homepage, added in copywriting section to porfolio

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="index.html"
+                href="about.html"
                 title="homepage"
-                >Home</a
+                >About</a
               >
             </li>
 
@@ -89,46 +89,18 @@
             >
           </div>
     </div>
-
-    <div class="container pt-5">
+<!-- Skills section -->
+    <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <img
-            src="src/olivia-swann.jpg"
-            alt="olivia swann headshot"
-            class="headshot"
-          />
-        </div>
 
-        <div class="col-md-6">
-          <p>
-            I am a seasoned digital marketing professional with expertise in
-            SEO, content strategy, and social media management. My work focuses
-            on helping businesses grow their online presence, drive organic
-            traffic, and engage audiences through strategic, data-driven
-            approaches.
-            <br />
-            <br />
-            With a strong background in creating optimized content, improving
-            website performance, and managing digital campaigns, I deliver
-            solutions that enhance visibility and achieve measurable results.
-            <br />
-            <br />
-            Currently, I am expanding my skills into front-end development to
-            further support businesses in creating seamless, impactful online
-            experiences.
-          </p>
-
-          
-        </div>
+      <div class="col-md-6">
+          <h2>Front-end Development</h2>
       </div>
-    </div>
-  </div>
-  </body>
-</html>
 
-<!-- <h1 class="m-5 text-center">HTML, CSS, and JavaScript Projects</h1>
-    <div class="container d-block">
+      <!-- Front-end projects -->
+  <div class="col-md-6 p-md-5">
+        
+    <div class="container d-flex">
       <div class="row d-flex flex-wrap">
         <div class="col-sm-4 d-flex">
           <img
@@ -149,4 +121,26 @@
           />
         </div>
       </div>
-    </div> -->
+    </div>  
+  </div>
+</div>
+
+<!-- Digital Marketing Skills -->
+    <div class="container p-md-5 m-md-5">
+      <div class="row">
+  <div class="col-md-6 p-md-5 d-flex order-md-1 order-2">
+    <!-- Image Column -->
+        <img src="src/Digital marketing and seo skills.png" alt="digital marketing and seo skills block" class="skills-block">
+          </div>
+            <div class="col-md-6 d-flex order-md-2 order-1">
+    <!-- Heading Column -->
+        <h2>Digital Marketing</h2>
+            </div>
+           </div>
+        </div> 
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
