--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
+              <a class="nav-link active" aria-current="page" href="about.html"
+                >About</a
               >
             </li>
             <li class="nav-item">
@@ -237,6 +237,8 @@
         </div>
       </div>
     </div>
-    <h2 id="social-media">Social media copy</h2>
+    <!-- Ad Copy -->
+    <h2 id="social-media ">Copywriting</h2>
+    <img src="src/Add Copy.png" alt="ad copy examples" class="skills-block" />
   </body>
 </html>
