--- a/about.html
+++ b/about.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-        <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Olivia Swann | About</title>
+    <meta
+      name="description"
+      content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability."
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -15,11 +27,11 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>Olivia Swann | About</title>
+
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-       <nav
+  </head>
+  <body>
+    <nav
       class="navbar navbar-expand-lg fixed-top"
       style="background-color: #e0be9a"
     >
@@ -65,7 +77,46 @@
       </div>
     </nav>
 
-    <div class="hero">
+    <div class="container about-section">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="about-section-content">
+            <h1 class="mb-4">About Me</h1>
+            <h2 class="mb-4">Digital Marketing and SEO Specialist</h2>
+            <p class="mb-4 pb-4">
+              I'm a digital marketing professional with expertise in SEO,
+              content strategy, and social media management. My work focuses on
+              helping businesses grow their online presence, drive organic
+              traffic, and engage audiences through strategic, data-driven
+              approaches.
+              <br />
+              <br />
+              With a strong background in creating optimized content, improving
+              website performance, and managing digital campaigns, I deliver
+              solutions that enhance visibility and achieve measurable results.
+              <br />
+              <br />
+              I'm in the process of expanding my skills into front-end
+              development to further support businesses in creating seamless,
+              impactful online experiences.
+            </p>
+            <div class="d-flex justify-content-center">
+              <a href="portfolio.html" class="tertiary-link" title="portfolio"
+                >See my projects</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img
+            src="src/olivia-swann.jpg"
+            alt="olivia swann headshot"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- <div class="hero">
       <h1>About Me</h1>
     </div>
 
@@ -81,7 +132,7 @@
 
         <div class="col-md-6">
           <p>
-            I am a seasoned digital marketing professional with expertise in
+            I'm a digital marketing professional with expertise in
             SEO, content strategy, and social media management. My work focuses
             on helping businesses grow their online presence, drive organic
             traffic, and engage audiences through strategic, data-driven
@@ -109,6 +160,6 @@
         </div>
       </div>
     </div>
-  </div>
-</body>
+  </div> -->
+  </body>
 </html>
