--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <title>Olivia Swann | SEO and Digital Marketing</title>
     <meta
       name="description"
       content="Front-end developer, SEO, and digital marketing specialist. View full portfolio and range of services."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -26,7 +27,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>Olivia Swann | SEO and Digital Marketing</title>
+   
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -77,6 +78,8 @@
       </div>
     </nav>
 
+    <!-- Hero -->
+
     <div class="hero">
       <h1>Olivia Swann</h1>
       <h2>Digital marketing and SEO specialist</h2>
@@ -93,28 +96,28 @@
     <div class="container">
       <div class="row">
 
-      <div class="col-md-6">
-          <h2>Front-end Development</h2>
+      <div class="col-lg-6">
+          <h2 class=>Front-end Development</h2>
       </div>
 
       <!-- Front-end projects -->
-  <div class="col-md-6 p-md-5">
+  <div class="col-lg-6 p-md-5">
         
     <div class="container d-flex">
       <div class="row d-flex flex-wrap">
-        <div class="col-sm-4 d-flex">
+        <div class="col-lg-4 d-flex">
           <img
             src="src/haiku poem generator picture.png"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
-        <div class="col-sm-4 d-flex">
+        <div class="col-lg-4 d-flex">
           <img
             src="src/weather app picture.png"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
-        <div class="col-sm-4 d-flex">
+        <div class="col-lg-4 d-flex">
           <img
             src="src/world clock project picture.png"
             class="img-fluid p-2 shadow rounded"
@@ -126,21 +129,7 @@
 </div>
 
 <!-- Digital Marketing Skills -->
-    <div class="container p-md-5 m-md-5">
-      <div class="row">
-  <div class="col-md-6 p-md-5 d-flex order-md-1 order-2">
-    <!-- Image Column -->
-        <img src="src/Digital marketing and seo skills.png" alt="digital marketing and seo skills block" class="skills-block">
-          </div>
-            <div class="col-md-6 d-flex order-md-2 order-1">
-    <!-- Heading Column -->
-        <h2>Digital Marketing</h2>
-            </div>
-           </div>
-        </div> 
-      </div>
-    </div>
-  </div>
-</div>
+           <!-- <h2 class=>Digital Marketing</h2> -->
+       
 </body>
 </html>
