--- a/services.html
+++ b/services.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability.">
+
     <title>Olivia Swann | Digital Marketing and SEO Services</title>
+    <meta name="description" content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability.">
+    
     
         <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -43,8 +45,8 @@
           id="navbarNav"
         >          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
+              <a class="nav-link active" aria-current="page" href="about.html"
+                >About</a
               >
             </li>
              <li class="nav-item">
