renamed about-section class to make more generic

--- a/about.html
+++ b/about.html
@@ -77,11 +77,11 @@
       </div>
     </nav>
 
-    <div class="container about-section">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
-            <h1 class="mb-4">About Me</h1>
+          <div class="content">
+            <h1>About Me</h1>
             <h2 class="mb-4">Digital Marketing and SEO Specialist</h2>
             <p class="mb-4 pb-4">
               I'm a digital marketing professional with expertise in SEO,
@@ -116,50 +116,5 @@
         </div>
       </div>
     </div>
-    <!-- <div class="hero">
-      <h1>About Me</h1>
-    </div>
-
-    <div class="container pt-5">
-      <div class="row">
-        <div class="col-md-6">
-          <img
-            src="src/olivia-swann.jpg"
-            alt="olivia swann headshot"
-            class="headshot"
-          />
-        </div>
-
-        <div class="col-md-6">
-          <p>
-            I'm a digital marketing professional with expertise in
-            SEO, content strategy, and social media management. My work focuses
-            on helping businesses grow their online presence, drive organic
-            traffic, and engage audiences through strategic, data-driven
-            approaches.
-            <br />
-            <br />
-            With a strong background in creating optimized content, improving
-            website performance, and managing digital campaigns, I deliver
-            solutions that enhance visibility and achieve measurable results.
-            <br />
-            <br />
-            Currently, I am expanding my skills into front-end development to
-            further support businesses in creating seamless, impactful online
-            experiences.
-          </p>
-
-             <div class="navigation-links mb-5">
-            <a href="services.html#contact" class="primary-link" title="contact"
-              >Contact me</a
-            >
-            <a href="portfolio.html" class="secondary-link" title="portfolio"
-              >Portfolio</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
   </body>
 </html>
