--- a/portfolio.html
+++ b/portfolio.html
@@ -72,176 +72,180 @@
       </div>
     </nav>
     <!-- Portfolio -->
-    <div class="hero">
+    <div class="content-container">
       <h1>Portfolio</h1>
-    </div>
-    <!-- Button to Copywriting section -->
-    <div class="d-block text-center pb-5">
+
+      <!-- Button to Copywriting section -->
+      <!-- <div class="d-block text-center pb-5">
       <a href="portfolio.html#blogs" class="tertiary-link">Writing samples</a>
-    </div>
-    <!-- Front-end projects -->
+    </div> -->
+      <!-- Front-end projects -->
 
-    <h2 id="front end projects">Front End Projects</h2>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img
-            src="src/haiku poem generator picture.png"
-            alt="haiku poem
-          generator"
-            class="img-fluid rounded"
-          />
-        </div>
-
-        <div class="col-md-6">
-          <h3 class="mt-5">Haiku Generator</h3>
-
-          <p>
-            An interactive application built with
-            <strong>JavaScript, HTML, CSS</strong>, and an AI API to generate
-            personalized poems based on user input. This project highlights
-            skills in integrating APIs, creating dynamic user experiences, and
-            designing responsive web applications.
-          </p>
-          <div class="mt-5 text-center">
-            <a
-              href="https://github.com/xorsx/poem-generator"
-              class="primary-link"
-              title="haiku project"
-            >
-              Launch App</a
-            >
-            <a
-              href="https://github.com/xorsx/world-clock-project"
-              class="tertiary-link m-5"
-              title="haiku generator"
-              >Github</a
-            >
-          </div>
-        </div>
-      </div>
-
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img
-            src="src/weather app picture.png"
-            alt="weather app project"
-            target="_blank"
-            class="img-fluid rounded"
-          />
-        </div>
-
-        <div class="col-md-6">
-          <h3 class="mt-5">Weather App</h3>
-          <p>
-            A dynamic application built with
-            <strong>JavaScript, HTML, CSS, and a weather API</strong> to provide
-            real-time weather updates. Users can view current conditions and
-            forecasts for their selected locations. This project demonstrates
-            proficiency in API integration, responsive design, and creating
-            interactive user interfaces.
-          </p>
-          <div class="mt-5 text-center">
-            <a
-              href="https://coding-project-weather-app.netlify.app/"
-              target="_blank"
-              class="primary-link"
-              title="weather app project"
-              >Launch App</a
-            >
-            <a
-              href="https://github.com/xorsx/weather-app-project"
-              class="tertiary-link m-5"
-              target="_blank"
-              title="weather app"
-              >Github</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img
-            src="src/world clock project picture.png"
-            target="_blank"
-            alt="world clock project"
-            class="img-fluid rounded"
-          />
-        </div>
-
-        <div class="col-md-6">
-          <h3>World Clock</h3>
-
-          <p>
-            A responsive application built with
-            <strong>HTML, CSS, and JavaScript</strong> that displays the current
-            time for multiple time zones. It features a dynamic real-time clock,
-            a city or time zone selector, and a clean, user-friendly design
-            optimized for desktop and mobile. This project showcases skills in
-            creating functional and interactive web applications.
-          </p>
-
-          <div class="mt-5 text-center">
-            <a
-              href="https://ors-world-clock-proj.netlify.app/"
-              class="primary-link"
-              title="clock project"
-              >Launch App</a
-            >
-            <a
-              href="https://github.com/xorsx/world-clock-project"
-              class="tertiary-link m-5"
-              title="clock project"
-              >Github</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Blogs -->
-
-    <h2 id="blogs">Blogs</h2>
-    <div class="container d-block primary-link">
-      <div class="row d-flex flex-wrap">
-        <div class="col-sm-4 d-flex">
-          <a
-            href="https://leafwell.com/blog/indigenous-two-spirit-and-female-cannabis-leaders"
-            class="tertiary-link"
-            title="indigenous leaders blog"
-            ><img
-              src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
-              class="img-fluid p-2 shadow rounded"
-              alt="two spirit and female indigenous cannabis leaders"
-          /></a>
-        </div>
-        <div class="col-sm-4 d-flex">
-          <a
-            href="https://leafwell.com/blog/celebrating-indigenous-peoples-day"
-            class="tertiary-link"
-            title="indigenous peoples day blog"
-            ><img
-              src="src/Eeastern-Band-of-Cherokee-Flag.webp"
-              class="img-fluid p-2 shadow rounded"
-              alt="celebrating indigenous peoples day EBOC flag"
-          /></a>
-        </div>
-        <div class="col-sm-4 d-flex">
-          <a
-            href="https://github.com/xorsx"
-            class="tertiary-link"
-            title="conference guide blog"
-          >
+      <h2 id="front end projects">Front End Projects</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
             <img
-              src="src/Billy-Anthony.webp"
-              class="img-fluid p-2 shadow rounded"
-              alt="billy anthony head of operations and partnerships at Leafwell"
-          /></a>
+              src="src/haiku poem generator picture.png"
+              alt="haiku poem
+          generator"
+              class="img-fluid rounded"
+            />
+          </div>
+
+          <div class="col-md-6">
+            <h3 class="mt-5">Haiku Generator</h3>
+
+            <p>
+              An interactive application built with
+              <strong>JavaScript, HTML, CSS</strong>, and an AI API to generate
+              personalized poems based on user input. This project highlights
+              skills in integrating APIs, creating dynamic user experiences, and
+              designing responsive web applications.
+            </p>
+            <div class="mt-5 text-center">
+              <a
+                href="https://github.com/xorsx/poem-generator"
+                class="primary-link"
+                title="haiku project"
+              >
+                Launch App</a
+              >
+              <a
+                href="https://github.com/xorsx/world-clock-project"
+                class="tertiary-link m-5"
+                title="haiku generator"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <img
+              src="src/weather app picture.png"
+              alt="weather app project"
+              target="_blank"
+              class="img-fluid rounded"
+            />
+          </div>
+
+          <div class="col-md-6">
+            <h3 class="mt-5">Weather App</h3>
+            <p>
+              A dynamic application built with
+              <strong>JavaScript, HTML, CSS, and a weather API</strong> to
+              provide real-time weather updates. Users can view current
+              conditions and forecasts for their selected locations. This
+              project demonstrates proficiency in API integration, responsive
+              design, and creating interactive user interfaces.
+            </p>
+            <div class="mt-5 text-center">
+              <a
+                href="https://coding-project-weather-app.netlify.app/"
+                target="_blank"
+                class="primary-link"
+                title="weather app project"
+                >Launch App</a
+              >
+              <a
+                href="https://github.com/xorsx/weather-app-project"
+                class="tertiary-link m-5"
+                target="_blank"
+                title="weather app"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <img
+              src="src/world clock project picture.png"
+              target="_blank"
+              alt="world clock project"
+              class="img-fluid rounded"
+            />
+          </div>
+
+          <div class="col-md-6">
+            <h3>World Clock</h3>
+
+            <p>
+              A responsive application built with
+              <strong>HTML, CSS, and JavaScript</strong> that displays the
+              current time for multiple time zones. It features a dynamic
+              real-time clock, a city or time zone selector, and a clean,
+              user-friendly design optimized for desktop and mobile. This
+              project showcases skills in creating functional and interactive
+              web applications.
+            </p>
+
+            <div class="mt-5 text-center">
+              <a
+                href="https://ors-world-clock-proj.netlify.app/"
+                class="primary-link"
+                title="clock project"
+                >Launch App</a
+              >
+              <a
+                href="https://github.com/xorsx/world-clock-project"
+                class="tertiary-link m-5"
+                title="clock project"
+                >Github</a
+              >
+            </div>
+          </div>
         </div>
       </div>
+
+      <!-- Blogs -->
+
+      <!-- Ad Copy -->
+      <h2 id="blogs">Writing Samples</h2>
+      <h3>Blogs</h3>
+      <div class="container d-block primary-link">
+        <div class="row d-flex flex-wrap">
+          <div class="col-sm-4 d-flex">
+            <a
+              href="https://leafwell.com/blog/indigenous-two-spirit-and-female-cannabis-leaders"
+              class="tertiary-link"
+              title="indigenous leaders blog"
+              ><img
+                src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
+                class="img-fluid p-2 shadow rounded"
+                alt="two spirit and female indigenous cannabis leaders"
+            /></a>
+          </div>
+          <div class="col-sm-4 d-flex">
+            <a
+              href="https://leafwell.com/blog/celebrating-indigenous-peoples-day"
+              class="tertiary-link"
+              title="indigenous peoples day blog"
+              ><img
+                src="src/Eeastern-Band-of-Cherokee-Flag.webp"
+                class="img-fluid p-2 shadow rounded"
+                alt="celebrating indigenous peoples day EBOC flag"
+            /></a>
+          </div>
+          <div class="col-sm-4 d-flex">
+            <a
+              href="https://github.com/xorsx"
+              class="tertiary-link"
+              title="conference guide blog"
+            >
+              <img
+                src="src/Billy-Anthony.webp"
+                class="img-fluid p-2 shadow rounded"
+                alt="billy anthony head of operations and partnerships at Leafwell"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <h3>Ad Copy</h3>
+      <h3>Social Media Copy</h3>
     </div>
-    <!-- Ad Copy -->
-    <h2 id="social-media ">Copywriting</h2>
-    <img src="src/Add Copy.png" alt="ad copy examples" class="skills-block" />
   </body>
 </html>
