resized images for more consistency and reformatted portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,15 +73,75 @@
     </nav>
     <!-- Portfolio -->
     <div class="content-container">
-      <h1>Portfolio</h1>
+      <div class="content">
+        <h1>Portfolio</h1>
+        <div class="row">
+          <div class="col-6">
+            <a
+              href="https://quiet-toffee-e1eb9d.netlify.app/"
+              title="haiku project"
+              target="_blank"
+            >
+              <img
+                src="src/haiku poem generator picture.png"
+                alt="haiku poem
+          generator"
+                class="img-fluid  rounded project-img"
+              />
+            </a>
+            <h3>Poem generator project</h3>
+            <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+          </div>
+          <div class="col-6">
+            <a
+              href="https://coding-project-weather-app.netlify.app/"
+              target="_blank"
+              title="weather app project"
+              ><img
+                src="src/weather app picture.png"
+                alt="weather app project"
+                target="_blank"
+                class="img-fluid  rounded project-img"
+              />
+            </a>
+            <h3>Weather app</h3>
+            <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+          </div>
+            <div class="row">
+          <div class="col-6">
+              <img
+                src="src/crochet website picture.png"
+                alt="crochet website"
+                class="img-fluid  rounded project-img"
+              />
+            <h3>Crochet Website</h3>
+            <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+          </div>
+          <div class="col-6">
+            <a
+              href="https://ors-world-clock-proj.netlify.app/"
+              target="_blank"
+              title="world clock project"
+              > <img
+              src="src/world clock project picture.png"
+              target="_blank"
+              alt="world clock project"
+              class="img-fluid  rounded project-img"
+            />
+            </a>
+            <h3>World Clock</h3>
+            <p class="text-center">Built with HTML, CSS, and JavaScript</p>
+            
+          </div>
+        </div>
 
-      <!-- Button to Copywriting section -->
-      <!-- <div class="d-block text-center pb-5">
+        <!-- Button to Copywriting section -->
+        <!-- <div class="d-block text-center pb-5">
       <a href="portfolio.html#blogs" class="tertiary-link">Writing samples</a>
     </div> -->
-      <!-- Front-end projects -->
+        <!-- Front-end projects -->
 
-      <h2 id="front end projects">Front End Projects</h2>
+        <!-- <h2 id="front end projects">Front End Projects</h2>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -89,7 +149,7 @@
               src="src/haiku poem generator picture.png"
               alt="haiku poem
           generator"
-              class="img-fluid rounded"
+              class="img-fluid  rounded project-img"
             />
           </div>
 
@@ -127,7 +187,7 @@
               src="src/weather app picture.png"
               alt="weather app project"
               target="_blank"
-              class="img-fluid rounded"
+              class="img-fluid  rounded project-img"
             />
           </div>
 
@@ -165,7 +225,7 @@
               src="src/world clock project picture.png"
               target="_blank"
               alt="world clock project"
-              class="img-fluid rounded"
+              class="img-fluid  rounded project-img"
             />
           </div>
 
@@ -200,52 +260,53 @@
         </div>
       </div>
 
-      <!-- Blogs -->
+       Blogs -->
 
-      <!-- Ad Copy -->
-      <h2 id="blogs">Writing Samples</h2>
-      <h3>Blogs</h3>
-      <div class="container d-block primary-link">
-        <div class="row d-flex flex-wrap">
-          <div class="col-sm-4 d-flex">
-            <a
-              href="https://leafwell.com/blog/indigenous-two-spirit-and-female-cannabis-leaders"
-              class="tertiary-link"
-              title="indigenous leaders blog"
-              ><img
-                src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
-                class="img-fluid p-2 shadow rounded"
-                alt="two spirit and female indigenous cannabis leaders"
-            /></a>
-          </div>
-          <div class="col-sm-4 d-flex">
-            <a
-              href="https://leafwell.com/blog/celebrating-indigenous-peoples-day"
-              class="tertiary-link"
-              title="indigenous peoples day blog"
-              ><img
-                src="src/Eeastern-Band-of-Cherokee-Flag.webp"
-                class="img-fluid p-2 shadow rounded"
-                alt="celebrating indigenous peoples day EBOC flag"
-            /></a>
-          </div>
-          <div class="col-sm-4 d-flex">
-            <a
-              href="https://github.com/xorsx"
-              class="tertiary-link"
-              title="conference guide blog"
-            >
-              <img
-                src="src/Billy-Anthony.webp"
-                class="img-fluid p-2 shadow rounded"
-                alt="billy anthony head of operations and partnerships at Leafwell"
-            /></a>
+        <!-- Ad Copy -->
+        <h2 id="blogs">Writing Samples</h2>
+        <h3>Blogs</h3>
+        <div class="container d-block primary-link">
+          <div class="row d-flex flex-wrap">
+            <div class="col-sm-4 d-flex">
+              <a
+                href="https://leafwell.com/blog/indigenous-two-spirit-and-female-cannabis-leaders"
+                class="tertiary-link"
+                title="indigenous leaders blog"
+                ><img
+                  src="src/Two-spirit-and-Female-Indigenous-Leaders.webp"
+                  class="img-fluid p-2 shadow  rounded project-img"
+                  alt="two spirit and female indigenous cannabis leaders"
+              /></a>
+            </div>
+            <div class="col-sm-4 d-flex">
+              <a
+                href="https://leafwell.com/blog/celebrating-indigenous-peoples-day"
+                class="tertiary-link"
+                title="indigenous peoples day blog"
+                ><img
+                  src="src/Eeastern-Band-of-Cherokee-Flag.webp"
+                  class="img-fluid p-2 shadow  rounded project-img"
+                  alt="celebrating indigenous peoples day EBOC flag"
+              /></a>
+            </div>
+            <div class="col-sm-4 d-flex">
+              <a
+                href="https://github.com/xorsx"
+                class="tertiary-link"
+                title="conference guide blog"
+              >
+                <img
+                  src="src/Billy-Anthony.webp"
+                  class="img-fluid p-2 shadow  rounded project-img"
+                  alt="billy anthony head of operations and partnerships at Leafwell"
+              /></a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <h3>Ad Copy</h3>
-      <h3>Social Media Copy</h3>
+        <h3>Ad Copy</h3>
+        <h3>Social Media Copy</h3>
+      </div>
     </div>
   </body>
 </html>
