--- a/services.html
+++ b/services.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Olivia Swann | Digital Marketing and SEO Services</title>
-    <meta name="description" content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability.">
-    
-    
-        <link
+    <meta
+      name="description"
+      content="Front-end developer, SEO, and digital marketing services. Contact for current rates and availability."
+    />
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -26,7 +28,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-       <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e0be9a;">
+    <nav
+      class="navbar navbar-expand-lg fixed-top"
+      style="background-color: #e0be9a"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Olivia Swann</a>
         <button
@@ -40,121 +45,105 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-  <div
+        <div
           class="collapse navbar-collapse justify-content-center"
           id="navbarNav"
-        >          <ul class="navbar-nav">
+        >
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="about.html"
                 >About</a
               >
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Porfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="services.html#contact">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="hero">
-    <h1>Services</h1>
-    </div>
 
+    <div class="content-container">
+      <div class="content">
+        <h1>Services</h1>
+        <div class="row bg-custom-light p-4">
+          <div class="col-6"><h2>SEO</h2></div>
+          <div class="col-6">
+            <ul>
+              <li>Audits and technical SEO analysis</li>
+              <li>Keyword research & optimization improvements</li>
+              <li>Competitor analysis</li>
+              <li>On-page SEO improvements</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row p-4">
+          <div class="col-6"><h2>Content Creation</h2></div>
+          <div class="col-6">
+            <ul>
+              <li>Blog writing & copywriting</li>
+              <li>Content strategy development</li>
+              <li>SEO-optimized articles & web pages</li>
+              <li>Editing and proofreading</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row bg-custom-light p-4">
+          <div class="col-6"><h2>Social Media</h2></div>
+          <div class="col-6">
+            <ul>
+              <li>Social media strategy development</li>
+              <li>Post creation & scheduling</li>
+              <li>Community management & engagement</li>
+              <li>Preformance tracking & reporting</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row p-4">
+          <div class="col-6"><h2>Front-end Development</h2></div>
+          <div class="col-6">
+            <ul>
+              <li>Custom website design and development</li>
+              <li>Responsive web design (mobile-friendly layouts)</li>
+              <li>Optimization for page speed and performance</li>
+              <li>Debugging and troubleshooting front-end issues</li>
+              <li>Website maintenance and updates</li>
+            </ul>
+          </div>
+        </div>
 
-    <h2 class="pt-5 text-center">SEO</h2>
+        <div id="contact" class="bg-custom-light rounded p-5">
+          <h2 class="text-center">Contact</h2>
+          <p>
+            Feel free to reach out for pricing information. I offer free SEO and
+            social media audits and customized packages designed to meet your
+            specific requirements and budget. I look forward to hearing from you
+            and helping your business grow!
+          </p>
+          <br />
+          <p class="text-center">
+            <strong>Are you a non-profit?</strong>
+            <br />
+            <br />
+            I offer pro bono work to non-profits and community organizers on a
+            case-by-case basis.
+          </p>
 
-    <p>
-      I specialize in comprehensive SEO audits that uncover opportunities to
-      boost your website's performance in search engines. Whether you're looking
-      to improve organic rankings, increase traffic, or enhance user experience,
-      I'll deliver actionable insights to optimize your site. My SEO services
-      include:
-    </p>
-    <ul>
-      <li>Technical SEO analysis</li>
-      <li>Keyword research & optimization improvements</li>
-      <li>Competitor analysis</li>
-      <li>On-page SEO improvements</li>
-    </ul>
-    <h2 class="pt-5 text-center">Content Creation</h2>
-    <p>
-      From blog posts to website copy, I create content that resonates with your
-      target audience and aligns with your brand's voice. My content creation
-      services are designed to boost your SEO efforts and engage readers,
-      including:
-    </p>
-    <ul>
-      <li>Blog writing & copywriting</li>
-      <li>Content strategy development</li>
-      <li>SEO-optimized articles & web pages</li>
-      <li>Editing and proofreading</li>
-    </ul>
-
-    <h2 class="pt-5 text-center">Social Media Management</h2>
-    <p>
-      Social media is a powerful tool for growing your brand and building
-      customer relationships. I can help manage your social channels, create
-      eye-catching posts, and implement a strategy that enhances engagement and
-      drives traffic. Services include:
-    </p>
-    <ul>
-      <li>Social media strategy development</li>
-      <li>Post creation & scheduling</li>
-      <li>Community management & engagement</li>
-      <li>Preformance tracking & reporting</li>
-    </ul>
-<div id="contact">
-     <h2 class="pt-5 text-center">Contact</h2>
-      <p>
-     Feel free to reach out for pricing information. I offer free SEO and social media audits and customized packages designed to
-        meet your specific requirements and budget. I look forward to hearing
-        from you and helping your business grow!
-
-        <br />
-        <br />
-       <strong>Are you a non-profit?</strong> I offer pro bono work to non-profits and community organizers on a
-        case-by-case basis. 
-      </p>
-      <p>
-        Email
-        <br />
-        oliviarswann@gmail.com
-      </p>
-      <form action="">
-        <label for="first-name">First Name</label>
-        <input
-          name="first-name"
-          type="text"
-          maxlength="100"
-          autocomplete="off"
-        />
-        <label for="last-name">Last Name</label>
-        <input
-          name="last-name"
-          type="text"
-          maxlength="100"
-          autocomplete="off"
-        />
-        <label for="email">Email</label>
-        <input name="email" type="text" maxlength="100" autocomplete="off" />
-        <label for="subject">Subject</label>
-        <input name="subject" type="text" maxlength="100" autocomplete="off" />
-        <label for="message">Message</label>
-        <input
-          name="message"
-          type="textarea"
-          maxlength="100"
-          autocomplete="off"
-        />
-        <button>Submit</button>
-      </form>
-    </main>
+          <h3>
+            Email
+            <br />
+          </h3>
+          <p class="text-center">
+            <a href="mailto:oliviarswann@gmail.com">oliviarswann@gmail.com</a>
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
