--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -126,10 +126,15 @@
       </div>
     </div>  
   </div>
+  <footer>
+<a href="mailto:oliviarswann@gmail.com" class="email-link d-flex justify-content-center">oliviarswann@gmail.com</a>
+
+<div class="social-links d-flex justify-content-center">
+ <a href="https://github.com/xorsx"><i class="fa-brands fa-github"></i></a>
+<a href="https://www.linkedin.com/in/olivia-swann-06a260131/"><i class="fa-brands fa-linkedin"></i></a>
 </div>
 
-<!-- Digital Marketing Skills -->
-           <!-- <h2 class=>Digital Marketing</h2> -->
-       
+  </footer>
+</div>
 </body>
 </html>
